Bug 424709 - Plasma crashes when I try to clear the clipboard on Wayland session of neon unstable
Summary: Plasma crashes when I try to clear the clipboard on Wayland session of neon u...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR crash
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords: drkonqi
: 425685 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-07-27 11:46 UTC by Patrick Silva
Modified: 2020-09-22 15:29 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-07-27 11:46:19 UTC
Application: plasmashell (5.19.80)

Qt Version: 5.14.2
Frameworks Version: 5.73.0
Operating System: Linux 5.3.0-62-generic x86_64
Windowing system: Wayland
Distribution: KDE neon Unstable Edition

-- Information about the crash:
- What I was doing when the application crashed:
I was using Wayland session and tried to clean the clipboard via clipboard applet in system tray.

The crash can be reproduced every time.

-- Backtrace:
Application: Plasma (plasmashell), signal: Aborted
Content of s_kcrashErrorMessage: [Current thread is 1 (Thread 0x7f7539597c80 (LWP 1409))]
[KCrash Handler]
#6  0x00007f7532ba9f47 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
#7  0x00007f7532bab8b1 in __GI_abort () at abort.c:79
#8  0x00007f753337368b in qt_message_fatal (context=..., message=<synthetic pointer>...) at global/qlogging.cpp:1914
#9  0x00007f753337368b in QMessageLogger::fatal(char const*, ...) const (this=this@entry=0x7f74ccbb29e0, msg=msg@entry=0x7f75269fc940 "The Wayland connection experienced a fatal error: %s") at global/qlogging.cpp:893
#10 0x00007f752696e5d8 in QtWaylandClient::QWaylandDisplay::checkError() const (this=<optimized out>) at qwaylanddisplay.cpp:198
#11 0x00007f752696e871 in QtWaylandClient::QWaylandDisplay::dispatchQueueWhile(wl_event_queue*, std::function<bool ()>, int) (this=0x55cbb19e62b0, queue=0x55cbb5c2a960, condition=..., timeout=timeout@entry=100) at qwaylanddisplay.cpp:247
#12 0x00007f7526976377 in QtWaylandClient::QWaylandWindow::waitForFrameSync(int) (this=0x55cbb5c2c1e0, timeout=100) at qwaylandwindow.cpp:632
#13 0x00007f751b146767 in QtWaylandClient::QWaylandGLContext::swapBuffers(QPlatformSurface*) (this=0x55cbb6967b00, surface=<optimized out>) at ../../../../hardwareintegration/client/wayland-egl/qwaylandglcontext.cpp:482
#14 0x00007f7533bc3e3f in QOpenGLContext::swapBuffers(QSurface*) (this=0x55cbb681edd0, surface=<optimized out>) at kernel/qopenglcontext.cpp:1112
#15 0x00007f753749a737 in QSGRenderThread::syncAndRender(QImage*) (this=this@entry=0x55cbb5d5fbc0, grabImage=grabImage@entry=0x0) at scenegraph/qsgthreadedrenderloop.cpp:841
#16 0x00007f753749e64f in QSGRenderThread::run() (this=0x55cbb5d5fbc0) at scenegraph/qsgthreadedrenderloop.cpp:980
#17 0x00007f7533397c2c in QThreadPrivate::start(void*) (arg=0x55cbb5d5fbc0) at thread/qthread_unix.cpp:342
#18 0x00007f752ffed6db in start_thread (arg=0x7f74ccbb3700) at pthread_create.c:463
#19 0x00007f7532c8ca3f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

#1  0x00007f752fff39f3 in __pthread_cond_wait_common (abstime=0x0, mutex=0x55cbb6ad3d90, cond=0x55cbb6ad3db8) at pthread_cond_wait.c:502
#2  0x00007f752fff39f3 in __pthread_cond_wait (cond=0x55cbb6ad3db8, mutex=0x55cbb6ad3d90) at pthread_cond_wait.c:655
#3  0x00007f753339e1db in QWaitConditionPrivate::wait(QDeadlineTimer) (deadline=..., this=0x55cbb6ad3d90) at thread/qwaitcondition_unix.cpp:146
#4  0x00007f753339e1db in QWaitCondition::wait(QMutex*, QDeadlineTimer) (this=<optimized out>, mutex=0x55cbb6b70860, deadline=...) at thread/qwaitcondition_unix.cpp:225
#5  0x00007f753339e359 in QWaitCondition::wait(QMutex*, unsigned long) (this=this@entry=0x55cbb6b70868, mutex=mutex@entry=0x55cbb6b70860, time=time@entry=18446744073709551615) at thread/qwaitcondition_unix.cpp:208
#6  0x00007f753749e233 in QSGRenderThreadEventQueue::takeEvent(bool) (wait=true, this=0x55cbb6b70858) at scenegraph/qsgthreadedrenderloop.cpp:255
#7  0x00007f753749e233 in QSGRenderThread::processEventsAndWaitForMore() (this=this@entry=0x55cbb6b707c0) at scenegraph/qsgthreadedrenderloop.cpp:905
#8  0x00007f753749e691 in QSGRenderThread::run() (this=0x55cbb6b707c0) at scenegraph/qsgthreadedrenderloop.cpp:1000
#9  0x00007f7533397c2c in QThreadPrivate::start(void*) (arg=0x55cbb6b707c0) at thread/qthread_unix.cpp:342
#10 0x00007f752ffed6db in start_thread (arg=0x7f74cf523700) at pthread_create.c:463
#11 0x00007f7532c8ca3f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

#1  0x00007f752c59b5c9 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f752c59b6dc in g_main_context_iteration () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f75335e67cb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7f74d0000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f7533585d2a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7f74d7ffeda0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:225
#5  0x00007f7533396757 in QThread::exec() (this=<optimized out>) at thread/qthread.cpp:536
#6  0x00007f7533397c2c in QThreadPrivate::start(void*) (arg=0x55cbb5b85d00) at thread/qthread_unix.cpp:342
#7  0x00007f752ffed6db in start_thread (arg=0x7f74d7fff700) at pthread_create.c:463
#8  0x00007f7532c8ca3f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

#1  0x00007f752c5e02b0 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f752c59b0b7 in g_main_context_check () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f752c59b570 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f752c59b6dc in g_main_context_iteration () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f75335e67cb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7f74f000c040, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#6  0x00007f7533585d2a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7f74f7bc8d80, flags=..., flags@entry=...) at kernel/qeventloop.cpp:225
#7  0x00007f7533396757 in QThread::exec() (this=this@entry=0x55cbb244b7a0) at thread/qthread.cpp:536
#8  0x00007f74dc8528e5 in QQuickXmlQueryEngine::run() (this=0x55cbb244b7a0) at qqmlxmllistmodel.cpp:325
#9  0x00007f7533397c2c in QThreadPrivate::start(void*) (arg=0x55cbb244b7a0) at thread/qthread_unix.cpp:342
#10 0x00007f752ffed6db in start_thread (arg=0x7f74f7bc9700) at pthread_create.c:463
#11 0x00007f7532c8ca3f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

#1  0x00007f752fff39f3 in __pthread_cond_wait_common (abstime=0x0, mutex=0x55cbb2d7db10, cond=0x55cbb2d7db38) at pthread_cond_wait.c:502
#2  0x00007f752fff39f3 in __pthread_cond_wait (cond=0x55cbb2d7db38, mutex=0x55cbb2d7db10) at pthread_cond_wait.c:655
#3  0x00007f753339e1db in QWaitConditionPrivate::wait(QDeadlineTimer) (deadline=..., this=0x55cbb2d7db10) at thread/qwaitcondition_unix.cpp:146
#4  0x00007f753339e1db in QWaitCondition::wait(QMutex*, QDeadlineTimer) (this=<optimized out>, mutex=0x55cbb2d3f0f0, deadline=...) at thread/qwaitcondition_unix.cpp:225
#5  0x00007f753339e359 in QWaitCondition::wait(QMutex*, unsigned long) (this=this@entry=0x55cbb2d3f0f8, mutex=mutex@entry=0x55cbb2d3f0f0, time=time@entry=18446744073709551615) at thread/qwaitcondition_unix.cpp:208
#6  0x00007f753749e233 in QSGRenderThreadEventQueue::takeEvent(bool) (wait=true, this=0x55cbb2d3f0e8) at scenegraph/qsgthreadedrenderloop.cpp:255
#7  0x00007f753749e233 in QSGRenderThread::processEventsAndWaitForMore() (this=this@entry=0x55cbb2d3f050) at scenegraph/qsgthreadedrenderloop.cpp:905
#8  0x00007f753749e691 in QSGRenderThread::run() (this=0x55cbb2d3f050) at scenegraph/qsgthreadedrenderloop.cpp:1000
#9  0x00007f7533397c2c in QThreadPrivate::start(void*) (arg=0x55cbb2d3f050) at thread/qthread_unix.cpp:342
#10 0x00007f752ffed6db in start_thread (arg=0x7f74dfbc1700) at pthread_create.c:463
#11 0x00007f7532c8ca3f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

#1  0x00007f752c5e02b0 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f752c59b0b7 in g_main_context_check () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f752c59b570 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f752c59b6dc in g_main_context_iteration () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f75335e67cb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7f74e8000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#6  0x00007f7533585d2a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7f74f597ed30, flags=..., flags@entry=...) at kernel/qeventloop.cpp:225
#7  0x00007f7533396757 in QThread::exec() (this=this@entry=0x55cbb1d24810) at thread/qthread.cpp:536
#8  0x00007f75373e0b06 in QQuickPixmapReader::run() (this=0x55cbb1d24810) at util/qquickpixmapcache.cpp:987
#9  0x00007f7533397c2c in QThreadPrivate::start(void*) (arg=0x55cbb1d24810) at thread/qthread_unix.cpp:342
#10 0x00007f752ffed6db in start_thread (arg=0x7f74f597f700) at pthread_create.c:463
#11 0x00007f7532c8ca3f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

#1  0x00007f752fff39f3 in __pthread_cond_wait_common (abstime=0x0, mutex=0x55cbb20bab78, cond=0x55cbb20baba0) at pthread_cond_wait.c:502
#2  0x00007f752fff39f3 in __pthread_cond_wait (cond=0x55cbb20baba0, mutex=0x55cbb20bab78) at pthread_cond_wait.c:655
#3  0x00007f75189c79ab in cnd_wait (mtx=0x55cbb20bab78, cond=0x55cbb20baba0) at ../include/c11/threads_posix.h:155
#4  0x00007f75189c79ab in util_queue_thread_func (input=input@entry=0x55cbb20bd6a0) at ../src/util/u_queue.c:275
#5  0x00007f75189c7597 in impl_thrd_routine (p=<optimized out>) at ../include/c11/threads_posix.h:87
#6  0x00007f752ffed6db in start_thread (arg=0x7f751219e700) at pthread_create.c:463
#7  0x00007f7532c8ca3f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

#1  0x00007f752fff39f3 in __pthread_cond_wait_common (abstime=0x0, mutex=0x55cbb20bab78, cond=0x55cbb20baba0) at pthread_cond_wait.c:502
#2  0x00007f752fff39f3 in __pthread_cond_wait (cond=0x55cbb20baba0, mutex=0x55cbb20bab78) at pthread_cond_wait.c:655
#3  0x00007f75189c79ab in cnd_wait (mtx=0x55cbb20bab78, cond=0x55cbb20baba0) at ../include/c11/threads_posix.h:155
#4  0x00007f75189c79ab in util_queue_thread_func (input=input@entry=0x55cbb20bd4b0) at ../src/util/u_queue.c:275
#5  0x00007f75189c7597 in impl_thrd_routine (p=<optimized out>) at ../include/c11/threads_posix.h:87
#6  0x00007f752ffed6db in start_thread (arg=0x7f750a19e700) at pthread_create.c:463
#7  0x00007f7532c8ca3f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

#1  0x00007f752fff39f3 in __pthread_cond_wait_common (abstime=0x0, mutex=0x55cbb20bab78, cond=0x55cbb20baba0) at pthread_cond_wait.c:502
#2  0x00007f752fff39f3 in __pthread_cond_wait (cond=0x55cbb20baba0, mutex=0x55cbb20bab78) at pthread_cond_wait.c:655
#3  0x00007f75189c79ab in cnd_wait (mtx=0x55cbb20bab78, cond=0x55cbb20baba0) at ../include/c11/threads_posix.h:155
#4  0x00007f75189c79ab in util_queue_thread_func (input=input@entry=0x55cbb20bd2c0) at ../src/util/u_queue.c:275
#5  0x00007f75189c7597 in impl_thrd_routine (p=<optimized out>) at ../include/c11/threads_posix.h:87
#6  0x00007f752ffed6db in start_thread (arg=0x7f751299f700) at pthread_create.c:463
#7  0x00007f7532c8ca3f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

#1  0x00007f752fff39f3 in __pthread_cond_wait_common (abstime=0x0, mutex=0x55cbb20bab78, cond=0x55cbb20baba0) at pthread_cond_wait.c:502
#2  0x00007f752fff39f3 in __pthread_cond_wait (cond=0x55cbb20baba0, mutex=0x55cbb20bab78) at pthread_cond_wait.c:655
#3  0x00007f75189c79ab in cnd_wait (mtx=0x55cbb20bab78, cond=0x55cbb20baba0) at ../include/c11/threads_posix.h:155
#4  0x00007f75189c79ab in util_queue_thread_func (input=input@entry=0x55cbb20bd0d0) at ../src/util/u_queue.c:275
#5  0x00007f75189c7597 in impl_thrd_routine (p=<optimized out>) at ../include/c11/threads_posix.h:87
#6  0x00007f752ffed6db in start_thread (arg=0x7f75131a0700) at pthread_create.c:463
#7  0x00007f7532c8ca3f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

#1  0x00007f752c59b4d0 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f752c59b6dc in g_main_context_iteration () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f75335e67cb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7f7514000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f7533585d2a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7f75227dbd80, flags=..., flags@entry=...) at kernel/qeventloop.cpp:225
#5  0x00007f7533396757 in QThread::exec() (this=this@entry=0x55cbb1be8460) at thread/qthread.cpp:536
#6  0x00007f7536f4afc5 in QQmlThreadPrivate::run() (this=0x55cbb1be8460) at qml/ftw/qqmlthread.cpp:155
#7  0x00007f7533397c2c in QThreadPrivate::start(void*) (arg=0x55cbb1be8460) at thread/qthread_unix.cpp:342
#8  0x00007f752ffed6db in start_thread (arg=0x7f75227dc700) at pthread_create.c:463
#9  0x00007f7532c8ca3f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

#1  0x00007f752c59b586 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f752c59b6dc in g_main_context_iteration () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f75335e67cb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7f751c000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f7533585d2a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7f7524654d70, flags=..., flags@entry=...) at kernel/qeventloop.cpp:225
#5  0x00007f7533396757 in QThread::exec() (this=this@entry=0x7f753550cda0 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread.cpp:536
#6  0x00007f7535294555 in QDBusConnectionManager::run() (this=0x7f753550cda0 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:179
#7  0x00007f7533397c2c in QThreadPrivate::start(void*) (arg=0x7f753550cda0 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:342
#8  0x00007f752ffed6db in start_thread (arg=0x7f7524655700) at pthread_create.c:463
#9  0x00007f7532c8ca3f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

#1  0x00007f752fff39f3 in __pthread_cond_wait_common (abstime=0x0, mutex=0x55cbb68b37b0, cond=0x55cbb68b37d8) at pthread_cond_wait.c:502
#2  0x00007f752fff39f3 in __pthread_cond_wait (cond=0x55cbb68b37d8, mutex=0x55cbb68b37b0) at pthread_cond_wait.c:655
#3  0x00007f753339e1db in QWaitConditionPrivate::wait(QDeadlineTimer) (deadline=..., this=0x55cbb68b37b0) at thread/qwaitcondition_unix.cpp:146
#4  0x00007f753339e1db in QWaitCondition::wait(QMutex*, QDeadlineTimer) (this=<optimized out>, mutex=0x55cbb5d5fc18, deadline=...) at thread/qwaitcondition_unix.cpp:225
#5  0x00007f753339e359 in QWaitCondition::wait(QMutex*, unsigned long) (this=0x55cbb5d5fc20, mutex=0x55cbb5d5fc18, time=time@entry=18446744073709551615) at thread/qwaitcondition_unix.cpp:208
#6  0x00007f753749b1dd in QSGThreadedRenderLoop::polishAndSync(QSGThreadedRenderLoop::Window*, bool) (this=this@entry=0x55cbb1a90960, w=<optimized out>, w@entry=0x55cbb2d452d0, inExpose=inExpose@entry=true) at scenegraph/qsgthreadedrenderloop.cpp:1544
#7  0x00007f753749d8bb in QSGThreadedRenderLoop::handleExposure(QQuickWindow*) (this=this@entry=0x55cbb1a90960, window=window@entry=0x55cbb5bfb6c0) at scenegraph/qsgthreadedrenderloop.cpp:1321
#8  0x00007f753749e01b in QSGThreadedRenderLoop::exposureChanged(QQuickWindow*) (this=0x55cbb1a90960, window=0x55cbb5bfb6c0) at scenegraph/qsgthreadedrenderloop.cpp:1216
#9  0x00007f7533b8fc05 in QWindow::event(QEvent*) (this=this@entry=0x55cbb5bfb6c0, ev=ev@entry=0x7fffac2ad8a0) at kernel/qwindow.cpp:2363
#10 0x00007f7537500975 in QQuickWindow::event(QEvent*) (this=this@entry=0x55cbb5bfb6c0, e=e@entry=0x7fffac2ad8a0) at items/qquickwindow.cpp:1773
#11 0x00007f75391a218b in PlasmaQuick::Dialog::event(QEvent*) (this=0x55cbb5bfb6c0, event=0x7fffac2ad8a0) at ./src/plasmaquick/dialog.cpp:1363
#12 0x00007f75348cb9ac in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=this@entry=0x55cbb19e3bc0, receiver=receiver@entry=0x55cbb5bfb6c0, e=e@entry=0x7fffac2ad8a0) at kernel/qapplication.cpp:3685
#13 0x00007f75348d2bb0 in QApplication::notify(QObject*, QEvent*) (this=0x7fffac2ae120, receiver=0x55cbb5bfb6c0, e=0x7fffac2ad8a0) at kernel/qapplication.cpp:3431
#14 0x00007f75335874a8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x55cbb5bfb6c0, event=0x7fffac2ad8a0) at kernel/qcoreapplication.cpp:1075
#15 0x00007f753358768e in QCoreApplication::sendSpontaneousEvent(QObject*, QEvent*) (receiver=receiver@entry=0x55cbb5bfb6c0, event=event@entry=0x7fffac2ad8a0) at kernel/qcoreapplication.cpp:1482
#16 0x00007f7533b85817 in QGuiApplicationPrivate::processExposeEvent(QWindowSystemInterfacePrivate::ExposeEvent*) (e=0x7f74b0323d40) at kernel/qguiapplication.cpp:3182
#17 0x00007f7533b85a7d in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) (e=e@entry=0x7f74b0323d40) at kernel/qguiapplication.cpp:2003
#18 0x00007f7533b5e1cb in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) (flags=flags@entry=...) at kernel/qwindowsysteminterface.cpp:1170
#19 0x00007f7533b5e4e8 in QWindowSystemInterface::flushWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) (flags=flags@entry=...) at kernel/qwindowsysteminterface.cpp:1134
#20 0x00007f7526976125 in QtWaylandClient::QWaylandWindow::applyConfigure() (this=0x55cbb5c2c1e0) at qwaylandwindow.cpp:517
#21 0x00007f75335ba57b in QObject::event(QEvent*) (this=0x55cbb5c2c1e0, e=0x55cbc4c32770) at kernel/qobject.cpp:1339
#22 0x00007f75348cb9ac in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=this@entry=0x55cbb19e3bc0, receiver=receiver@entry=0x55cbb5c2c1e0, e=e@entry=0x55cbc4c32770) at kernel/qapplication.cpp:3685
#23 0x00007f75348d2bb0 in QApplication::notify(QObject*, QEvent*) (this=0x7fffac2ae120, receiver=0x55cbb5c2c1e0, e=0x55cbc4c32770) at kernel/qapplication.cpp:3431
#24 0x00007f75335874a8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x55cbb5c2c1e0, event=0x55cbc4c32770) at kernel/qcoreapplication.cpp:1075
#25 0x00007f753358767e in QCoreApplication::sendEvent(QObject*, QEvent*) (receiver=receiver@entry=0x55cbb5c2c1e0, event=event@entry=0x55cbc4c32770) at kernel/qcoreapplication.cpp:1470
#26 0x00007f753358a121 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x55cbb19d8b20) at kernel/qcoreapplication.cpp:1815
#27 0x00007f753358a6b8 in QCoreApplication::sendPostedEvents(QObject*, int) (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1674
#28 0x00007f75335e7103 in postEventSourceDispatch(GSource*, GSourceFunc, gpointer) (s=0x55cbb1a5e040) at kernel/qeventdispatcher_glib.cpp:277
#29 0x00007f752c59b417 in g_main_context_dispatch () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007f752c59b650 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x00007f752c59b6dc in g_main_context_iteration () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#32 0x00007f75335e67ac in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x55cbb1a5dd10, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#33 0x00007f7533585d2a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7fffac2adfc0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:225
#34 0x00007f753358f4a0 in QCoreApplication::exec() () at kernel/qcoreapplication.cpp:1383
#35 0x000055cbb0ea71bf in main(int, char**) (argc=<optimized out>, argv=<optimized out>) at ./shell/main.cpp:224

Possible duplicates by query: bug 424593, bug 424009, bug 423951, bug 423738, bug 423222.

Reported using DrKonqi
Comment 1 Leszek Lesner 2020-07-28 06:34:07 UTC
I can confirm this issue with self compiled plasma aswell
Comment 2 Patrick Silva 2020-08-22 23:27:32 UTC
*** Bug 425685 has been marked as a duplicate of this bug. ***
Comment 3 Thiago Sueto 2020-08-23 02:01:18 UTC
Can confirm this on Plasma from master.

Operating System: openSUSE Tumbleweed 20200818
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.74.0
Qt Version: 5.15.0
Comment 4 Tony 2020-08-27 21:52:47 UTC
Can aso confirm this on openSuse Tumbleweed, everytime.
Also, possible duplicate : https://bugs.kde.org/show_bug.cgi?id=396308
Comment 5 Patrick Silva 2020-09-18 15:24:02 UTC
Crash also reproducible on Arch running Plasma 5.20 beta.

Operating System: Arch Linux
KDE Plasma Version: 5.19.90
KDE Frameworks Version: 5.74.0
Qt Version: 5.15.1
Comment 6 David Edmundson 2020-09-18 15:43:55 UTC
The reports are different.

One has the client crashing, the other has the server crashing.

@patrick when you reproduced you see plasmashell closing? or everything like Tony?
Comment 7 Patrick Silva 2020-09-18 15:59:53 UTC
On my system everything on desktop disappears and I get a black screen with cursor, then plasma automatically restarts after a few seconds.
Comment 8 David Edmundson 2020-09-18 23:48:11 UTC
I see what's causing it. Will fix. Thanks
Comment 9 Bug Janitor Service 2020-09-19 22:01:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/277
Comment 10 David Edmundson 2020-09-22 13:53:01 UTC
Git commit 97f4599ac1c4cd58ca98a9e60ac4ecbbbe0a3b95 by David Edmundson.
Committed on 22/09/2020 at 13:41.
Pushed by davidedmundson into branch 'master'.

[klipper] Check version before calling v2 DataDevice methods

Calling a V2 method when our proxy is just at V1 is a fatal error.

This wasn't guarded. V2 isn't implemented fully anyway.

M  +4    -1    klipper/systemclipboard/waylandclipboard.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/97f4599ac1c4cd58ca98a9e60ac4ecbbbe0a3b95
Comment 11 David Edmundson 2020-09-22 13:58:05 UTC
Git commit 913a66a6d933bceae82b656ce2a268ee74b73bbb by David Edmundson.
Committed on 22/09/2020 at 13:58.
Pushed by davidedmundson into branch 'Plasma/5.20'.

[klipper] Check version before calling v2 DataDevice methods

Calling a V2 method when our proxy is just at V1 is a fatal error.

This wasn't guarded. V2 isn't implemented fully anyway.


(cherry picked from commit 97f4599ac1c4cd58ca98a9e60ac4ecbbbe0a3b95)

M  +4    -1    klipper/systemclipboard/waylandclipboard.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/913a66a6d933bceae82b656ce2a268ee74b73bbb