[klipper] Check version before calling v2 DataDevice methods

Calling a V2 method when our proxy is just at V1 is a fatal error.

This wasn't guarded. V2 isn't implemented fully anyway.

BUG: 424709